fixed spacing

--- a/src/app/total-recipes-output/total-recipes-output.component.css
+++ b/src/app/total-recipes-output/total-recipes-output.component.css
@@ -4,6 +4,3 @@ input.ng-invalid.ng-touched{
 .container{
     padding-top: 10px;
 }
-tr{
-    height: 80px;
-}
